@@ -89,6 +89,7 @@ libpthread {
   GLIBC_2.3.4
   GLIBC_2.4
   GLIBC_2.6
+  GLIBC_2.11
   GLIBC_PRIVATE
 }
 libresolv {
